--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <title>Sarah Peled Portfolio</title>
     <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="scroll.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="script.js" defer></script>
 </head>
@@ -46,6 +47,11 @@
                 </div>
                 <div class="child-container photo-container">
                     <img src="img/me2.png" alt="Portrait of me in the foreground with 1's and 0's in the background" id="portrait">
+                </div>
+                <div id="scroll-animation">
+                    <div id="arrow1"></div>
+                    <div id="arrow2"></div>
+                    <div id="arrow3"></div>
                 </div>
             </div>
         </section>
