blue mail is clickable

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <title>Sarah Peled Portfolio</title>
+    <title>Sarah Peled Updated Portfolio</title>
     <link rel="stylesheet" href="index.css">
     <link rel="stylesheet" href="scroll.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -353,8 +353,10 @@
                         </a>
                     </div>
                     <div class="double-mail">
-                        <img src="img/mail-closed.png" alt="Closed envelope" id="mail-closed">
-                        <img src="img/mail-open.png" alt="Open envelope with letter inside" id="mail-open">
+                        <a href="mailto:sarahpeled00@gmail.com" target="_blank">
+                            <img src="img/mail-closed.png" alt="Closed envelope" id="mail-closed">
+                            <img src="img/mail-open.png" alt="Open envelope with letter inside" id="mail-open">
+                        </a>
                     </div>        
                 </div>
             </div>
