scroll-up-button

--- a/index.html
+++ b/index.html
@@ -357,7 +357,14 @@
                             <img src="img/mail-closed.png" alt="Closed envelope" id="mail-closed">
                             <img src="img/mail-open.png" alt="Open envelope with letter inside" id="mail-open">
                         </a>
-                    </div>        
+                    </div> 
+                    <div>
+                        <a href="#frontpage">
+                            <div id="scroll-top">
+                            <div id="scroll-top-button"></div>
+                            </div>
+                        </a>
+                    </div>       
                 </div>
             </div>
         </section>
