--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <header>
-        <nav>
+        <nav id="scroll-top-frontpage">
             <div class="hamburger">
                 <div class="line"></div>
                 <div class="line"></div>
@@ -359,7 +359,7 @@
                         </a>
                     </div> 
                     <div>
-                        <a href="#frontpage">
+                        <a href="#scroll-top-frontpage">
                             <div id="scroll-top">
                             <div id="scroll-top-button"></div>
                             </div>
