skill-icon HOVER

--- a/index.html
+++ b/index.html
@@ -142,26 +142,31 @@
                         <li>
                             <div class="skill-icon">
                                 <img src="img/icon-HTML5.png" alt="HTML 5 icon">
+                                <div class="skill-overlay">HTML 5</div>
                             </div>
                         </li>
                         <li>
                             <div class="skill-icon">
                                 <img src="img/icon-CSS3.png" alt="CSS 3 icon">
+                                <div class="skill-overlay">CSS 3</div>
                             </div>
                         </li>
                         <li>
                             <div class="skill-icon">
                                 <img src="img/icon-JAVA.png" alt="Java icon">
+                                <div class="skill-overlay">Java</div>
                             </div>
                         </li>
                         <li>
                             <div class="skill-icon">
                                 <img src="img/icon-CSHARP.png" alt="C Sharp icon">
+                                <div class="skill-overlay">C#</div>
                             </div>
                         </li>
                         <li>
                             <div class="skill-icon">
                                 <img src="img/icon-MARKDOWN.png" alt="Markdown icon">
+                                <div class="skill-overlay">Markdown</div>
                             </div>
                         </li>
                     </ul>
@@ -182,51 +187,61 @@
                         <li>
                             <div class="skill-icon">
                                 <img style="height: 52px;" src="img/icon-VSCODE.png" alt="Visual Studio Code icon">
+                                <div class="skill-overlay">Visual Studio Code</div>
                             </div>
                         </li>
                         <li>
                             <div class="skill-icon">
                                 <img src="img/icon-PHOTOSHOP.png" alt="Adobe Photoshop icon">
+                                <div class="skill-overlay">Adobe Photoshop</div>
                             </div>
                         </li>
                         <li>
                             <div class="skill-icon">
                                 <img src="img/icon-PREMIEREPRO.png" alt="Adobe Premiere Pro icon">
+                                <div class="skill-overlay">Adobe Premiere Pro</div>
                             </div>
                         </li>
                         <li>
                             <div class="skill-icon">
                                 <img src="img/icon-AFTEREFFECTS.png" alt="Adobe After Effects icon">
+                                <div class="skill-overlay">Adobe <br> After Effects</div>
                             </div>
                         </li>
                         <li>
                             <div class="skill-icon">
                                 <img src="img/icon-XD.png" alt="Adobe XD icon">
+                                <div class="skill-overlay">Adobe XD</div>
                             </div>
                         </li>
                         <li>
                             <div class="skill-icon">
                                 <img src="img/icon-WORDPRESS.png" alt="Wordpress icon">
+                                <div class="skill-overlay">Wordpress</div>
                             </div>
                         </li>
                         <li>
                             <div class="skill-icon">
                                 <img style="height: 68px;" src="img/icon-UNITY.png" alt="Unity icon">
+                                <div class="skill-overlay">Unity</div>
                             </div>
                         </li>
                         <li>
                             <div class="skill-icon">
                                 <img src="img/icon-GIT.png" alt="Git icon">
+                                <div class="skill-overlay">Git</div>
                             </div>
                         </li>
                         <li>
                             <div class="skill-icon">
                                 <img src="img/icon-ILLUSTRATOR.png" alt="Adobe Illustrator icon">
+                                <div class="skill-overlay">Adobe Illustrator</div>
                             </div>
                         </li>
                         <li>
                             <div class="skill-icon">
                                 <img src="img/icon-INDESIGN.png" alt="Adobe InDesign icon">
+                                <div class="skill-overlay">Adobe InDesign</div>
                             </div>
                         </li>
                     </ul>
